Fix Banner Issues on Mobile

--- a/css/index.css
+++ b/css/index.css
@@ -225,7 +225,6 @@ h4 {
 #twitter-feed {
     width: 100%;
     height: 50px;
-    /*background-color: #dfa941;*/
     position: fixed;
     top: 0;
     left: 0;
@@ -237,7 +236,9 @@ h4 {
 #twitter-body {
   background-color: #dfa941;
   display: none;
+  padding-top: 10px;
 }
+
 
 #twitter-banner {
    padding-top: 5px;
